# si-applauncher

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  autogen.sh  configure.ac
conf/: si-applauncher.conf
inc/: al-daemon.h  al-log.h  al_dbus-glue.h  dbus_interface.h  logging.h  lum.h  notifier.h  utils.h
services/: al_daemon.service  systemctl_monitor.service
src/: al-daemon.c  al-daemon.h  al_dbus.xml  dbus_interface.c  global_notif_custom_marshaller.c  lum.c  notifier.c  task_info_custom_marshaller.c  task_state_change_custom_marshaller.c  utils.c
